--- a/company-profile.html
+++ b/company-profile.html
@@ -37,7 +37,7 @@
                         <a class="nav-link btn btn-outline-secondary" href="#contact">Kontak</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-secondary" href="index.php">Login Admin</a>
+                        <a class="nav-link btn btn-outline-secondary" href="index.html">Login Admin</a>
                     </li>
                 </ul>
             </div>
